(a2t) add optional field return_timestamps
